# as_learning

./: .gitignore  README.md  WEEK4_STEP_BY_STEP.md
.claude/commands/: run-test.md  schema-db.md
week0/weather/: .mcp.json  main.py  weather.py
week1/: chain_of_thought.py  k_shot_prompting.py  self_consistency_prompting.py
week2/: writeup.md
week2/app/: schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_api.py  test_extract.py
week3/: .mcp.json  .mcp.json.swp  common.py  fred.py  imf.py  main.py  main_data.py  main_news.py  main_paper.py  news.py  pyproject.toml  scholar.py  server_data.py  server_news.py  server_paper.py  timeline.py  world_bank.py
week3/.claude/: settings.local.json
week3/tests/: test_news.py  test_scholar.py  test_timeline.py
week4/backend/app/: db.py
