[project]
name = "week3"
version = "0.1.0"
description = "Country research MCP servers (papers, news, data)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
mcp-paper = "main_paper:main"
mcp-news = "main_news:main"
mcp-data = "main_data:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
